2007-05-13  Paolo Borelli  <pborelli@katamail.com>

	* Makefile.am: install gtksourceview2.defs

2007-05-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.defs: added new enum type GtkSourceViewSmartHomeEndType
	
	* configure.ac: fix project link

2007-05-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.override: (gtk_source_style_manager_get_search_path)
	use PyList instead of a PyTuple.

2007-05-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* initial import