@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+includedir=@includedir@
+datarootdir=@datarootdir@
+datadir=@datadir@
+
+Name: PyGtkSourceView
+Description: Python bindings for GtkSourceView
+Requires: gtksourceview-2.0
+Version: @VERSION@
+
