@@ -1,3 +1,11 @@
+2007-05-14  Paolo Borelli  <pborelli@katamail.com>
+
+	* configure.ac:
+	* Makefile.am:
+	* pygtksourceview-2.0.pc.in:
+
+	Install pygtksourceview-2.0.pc file
+
 2007-05-13  Paolo Borelli  <pborelli@katamail.com>
 
 	* Makefile.am: install gtksourceview2.defs
